nginx-ingress-controller/test-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls: 
  - hosts:
      - demo.apps.cloudstudent.shop
    secretName: hello-app-tls
  rules:
  - host: demo.apps.cloudstudent.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-service
            port:
              number: 80
